Bug 232339 - wrong flash export url (for SimpleViewer)
Summary: wrong flash export url (for SimpleViewer)
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Flash (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-27 12:48 UTC by Bastian Senst
Modified: 2018-08-23 08:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bastian Senst 2010-03-27 12:48:17 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

On clicking on Flash-Export digikam asks the user to download SimpleViewer Version 1.9 from http://www.airtightinteractive.com/simpleviewer
This page doesn't exist anymore.
Use http://www.simpleviewer.net/simpleviewer/ instead.
On the above website is Version 2.0.x the only version available.
Comment 1 Johannes Wienke 2010-03-27 13:13:00 UTC
SVN commit 1107982 by jwienke:

Fix simpleviewer url

BUG: 232339

 M  +3 -3      firstrundlg.cpp  
 M  +1 -1      svedialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1107982
Comment 2 Mark Purcell 2010-03-30 14:04:54 UTC
*** Bug 225401 has been marked as a duplicate of this bug. ***