Fix simpleviewer url

BUG: 232339

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1107982